  
  * Clients with weird chomp-like behaviour that always eats one byte past END
    will now receive a PAD-byte at the end of a packet if they sent one, too.
  
  * All cacheable databases (which is most of them) now have support for
    local caching on disk, instead of just memory, and for persistent on-disk
    caching, in case the database server is sometimes unreachable.
  
  * No more warnings: all logging

  * Complete rewrites of the following subsystems:
    - Logging: now uses Python's logging facility
    - Web: now completely extensible and definable through extensions
    - Stats: now an event system integrated with extensions
    - DHCP: streamlined, more efficient, and less-confusing (within core logic)
    - Databases: fully embraced custom databases, with love for subclassing
      against builtins
      
  * Added new officially supported extension modules:
    - dynamism: dynamic address allocation
    - feedservice: provides an ATOM feed that reads logging events
    - httpdb: generic REST-JSON webservice database
      (usable, but also a good example for building your own)
    - recent_activity: web-interface component to monitor DHCP activity, with
      fancy graphs
    - statistics: all the goodness of the old stats stuff, with more
      flexibility, but now it's optional if you don't want it

 -- Neil Tallim <flan@uguu.ca>  Tue, 20 Aug 2013 11:47:57 -0600

staticdhcpd (1.6.4) stable; urgency=low

  * Backported a feature from 2.0.0 that lets users define their own custom
    database engines without needing to touch the core code.
  
 -- Neil Tallim <flan@uguu.ca>  Mon, 01 Apr 2013 00:00:00 -0600

staticdhcpd (1.6.3) stable; urgency=low

  * Fixed a long-standing issue in which PXE clients that sent broadcast
    packets containing `ciaddr` were responded to via broadcast, rather than
    unicast to that `ciaddr` value.
  
 -- Neil Tallim <flan@uguu.ca>  Thu, 28 Mar 2013 00:00:00 -0600

staticdhcpd (1.6.2) stable; urgency=low
